# VSRG

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  config.json
.cache/clangd/index/: D3D11_PixelShader_Advanced.h.90AFC918C13CC368.idx  D3D11_PixelShader_Colors.h.720A265D1C8E227B.idx  D3D11_PixelShader_Textures.h.D565A1F557A29F8D.idx  D3D11_VertexShader.h.29B898F2894154F9.idx  D3D12_Blit.h.259B4CEDF86A6DF0.idx  D3D12_PixelShader_Advanced.h.E3C58F2A40FABAED.idx  D3D12_PixelShader_Colors.h.BC4E85EF901AA9FC.idx  D3D12_PixelShader_Textures.h.7732D2AE13FB8F55.idx  D3D12_RootSig_Advanced.h.5160D986CC5CE812.idx  D3D12_RootSig_Color.h.93BA74B1AB7209FA.idx  D3D12_RootSig_Texture.h.80E903599284BFBE.idx  D3D12_VertexShader_Advanced.h.F4C240340310ACF4.idx  D3D12_VertexShader_Color.h.11BAC79C6DA52ECC.idx  D3D12_VertexShader_Texture.h.CA89E8CCA730EAAB.idx  D3D9_PixelShader_YUV.h.EC5DB143645128B0.idx  IMG.c.E09BE953A7640BC5.idx  IMG_WIC.c.BFF37801B0B53E4C.idx  IMG_avif.c.6FDB5C2419E2243E.idx  IMG_bmp.c.8968D6B43D2AA369.idx  IMG_gif.c.C62410D120C77FEF.idx  IMG_jpg.c.4A3A93CEB3A04529.idx  IMG_jxl.c.51D46D5D2DED294F.idx  IMG_lbm.c.AB0E7A5D0085A068.idx  IMG_pcx.c.09C1EF95EC01B012.idx  IMG_png.c.3DF68A4BFE48E4A8.idx  IMG_pnm.c.F4441B067B2B5F99.idx  IMG_qoi.c.F6875D88995A1BC2.idx  IMG_stb.c.73F51949E4076902.idx  IMG_svg.c.CBCC63A15D9379F6.idx  IMG_tga.c.9A144D0A3AEFC871.idx  IMG_tif.c.BB5A53A3BDDEB3B6.idx  IMG_webp.c.47317FD7C389093B.idx  IMG_xcf.c.06FB984186C5FB22.idx  IMG_xpm.c.AA6A83B93B1DA448.idx  IMG_xv.c.63F3BC3749C90E6A.idx  SDL.c.28C0D744DE0A31E9.idx  SDL.h.201AEBFD45002F37.idx  SDL_RLEaccel.c.A6BF4121D43A921C.idx  SDL_RLEaccel_c.h.1C488D1F0281B799.idx  SDL_assert.c.444D80399EC19C23.idx  (+643 more)
resources/skin/simple/play/: config.json
sprite_engine/: CMakeLists.txt
sprite_engine/src/: bmp_sprite.cpp  prefab.cpp  prefab.hpp  scene.cpp  scene.hpp  sprite.cpp  sprite.hpp
src/: draw.cpp  game.cpp  game.hpp  json_util.hpp  main.cpp  map_parser.cpp  map_parser.hpp  play_scene.cpp  play_scene.hpp  playfield.cpp  test.cpp  test.hpp
src/game_scripts/: main_script.cpp  main_script.hpp  map_parser.cpp  map_parser.hpp  play_scene.cpp  play_scene.hpp
src/sprite_engine/: CMakeLists.txt
src/sprite_engine/src/: bmp_sprite.cpp  bmp_sprite.hpp  scene.cpp  scene.hpp  sprite.cpp
